330-network-policy/api.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-depl
  labels:
    app: api 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: mycontainer
        image: nicolaka/netshoot
        command: ["sleep", "60000"]
