330-network-policy/db.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-depl
  labels:
    app: db 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: mycontainer
        image: nicolaka/netshoot
        command: ["sleep", "60000"]
