330-network-policy/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depl
  labels:
    app: frontend 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: mycontainer
        image: nicolaka/netshoot
        command: ["sleep", "60000"]
