330-network-policy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: api
      ports:
        - protocol: TCP
          port: 5000
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: api 
      ports:
        - protocol: TCP
          port: 6379
